# qwen-tts

./: .gitignore  README.md  SKILL.md  cli.py  dataset.py  prepare_data.py  pyproject.toml  train.py
src/qwen_tts/: __init__.py  check.py  cli.py  prepare_data.py  split.py  train.py
